--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,7 @@
 .home {
 
   .intro {
+    margin-top: 100px;
     img{
       border-radius: 5px;
 
@@ -70,8 +71,8 @@
     
     @media @phone{
       .flex(center,center,column);
-      padding: 20px 15px;
       margin-top: 20px;
+      padding: 20px 15px;
     }
 
     .walk-text {
@@ -101,7 +102,7 @@
         }
       }
       .btn:hover{
-        .btn-hover(@waterloo, skyblue);
+        .hover-color(@waterloo, skyblue);
       }
     }
 
