--- a/less/mixins.less
+++ b/less/mixins.less
@@ -13,7 +13,7 @@
     background:black;
    
 }
-.btn-hover(@c, @bg){
+.hover-color(@c, @bg){
     color:@c;
     background-color: @bg;
 }
