--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,13 +1,18 @@
 // Navigation code here
 div.navigation{
-    height:15vh;
+    position:fixed;
+    top:0;
+    width:100%;
+    padding: 10px 0;
     .flex(space-around,center,column);
     background: @nav-bg;
+    opacity: .8;
     h1{
         font-size: 4rem;
     }
     nav{
-        width:30%;
+        padding-top:20px;
+        width:50%;
         .flex(space-between,center);
         @media @phone{
             width:80%;
@@ -17,6 +22,10 @@ div.navigation{
             color: @nav-font;
             font-size: 1.8rem;
             font-weight: bold;
+        }
+        a:hover{
+            .hover-color( @btn-bg-color, @nav-bg);
+            font-size:1.9rem;
         }
         
     }
